--- a/Buffons_Needle/Estimating the value of PI via Buffon's Needle.ipynb
+++ b/Buffons_Needle/Estimating the value of PI via Buffon's Needle.ipynb
@@ -54,7 +54,7 @@
    "outputs": [],
    "source": [
     "COLORS = ['red','black','yellow','green', 'purple']\n",
-    "NEEDLE_LEMGTH = 1.0\n",
+    "NEEDLE_LENGTH = 1.0\n",
     "\n",
     "def needle_orientation():\n",
     "    '''\n",
@@ -67,10 +67,10 @@
     "\n",
     "    return x_center, y_center, angle\n",
     "\n",
-    "def needle_construct_graph(L = NEEDLE_LEMGTH, **mode):\n",
+    "def needle_construct_graph(L = NEEDLE_LENGTH, **mode):\n",
     "    '''\n",
     "    Given center coordinates and angle of orientation of needle construct\n",
-    "    needle end point coordinates by makes projections on both axes\n",
+    "    needle end point coordinates by making projections on both axes\n",
     "    and plot random needle of length 1 on grid\n",
     "    '''\n",
     "\n",
@@ -119,7 +119,7 @@
     "\n",
     "    return count\n",
     "\n",
-    "def calculate_pi(hits, pins, needle_length = NEEDLE_LEMGTH):\n",
+    "def calculate_pi(hits, pins, needle_length = NEEDLE_LENGTH):\n",
     "    '''\n",
     "    Calculate the value of pi\n",
     "    '''\n",
